--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nestjs-api",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "",
-  "author": "",
+  "author": "Rahul Dogra",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
